# ZPack

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: FindZSTD.cmake  FindxxHash.cmake  TestLargeFiles.cmake
docs/: Doxyfile  DoxygenLayout.xml  README.md  customdoxygen.css  specs.md  specs.txt
lib/: CMakeLists.txt  crc.c  crc.cpp  error.cpp  packer.cpp  reader.cpp  unpacker.cpp  utils.h  writer.cpp  zpack.h  zpack_common.c  zpack_common.h  zpack_crc.h  zpack_export.h  zpack_read.c  zpack_stream.c  zpack_utils.h  zpack_write.c
programs/: CMakeLists.txt  args.c  args.h  commands.c  commands.h  platform_defs.h  utils.c  utils.h  zpack-cli.cpp  zpack_cli.c
tests/: CMakeLists.txt  README.md  archive.h  open_archive.c  read_archive.c  write_archive.c
tests/workdir/: archive_lz4.zpk  archive_lz4f.zpk  archive_none.zpk  archive_zstd.zpk  file1.txt  file2.txt
